test/test_units/test_kclvm/test_types/invalid_test_data/func_call/func_call_3.k
schema Person:
    name: str

func: any = lambda x: Person {
    x.name
}
name = func(Person {name = 1})
